# treinamento_rust

./: .gitignore  Cargo.toml  README.md  cargo_build.sh  cargo_build_release.sh  cargo_debug-gdb.sh  cargo_debug-lldb.sh  cargo_debug-perf.sh  cargo_debug-valgrind.sh  cargo_fmt.sh  cargo_run.sh  cargo_watch.sh  debug-gdb.sh  destructing.txt  enum.txt  format.sh  hash_map.txt  pattern_matching.txt  run.sh  treinamento_rust.sln
1-modulos_app/: Cargo.toml
historico_mudancas/17 - Persistencia/04 - orm_disel/: .env  Cargo.toml  README.md
historico_mudancas/17 - Persistencia/04 - orm_disel/migrations/2024-02-21-010948_cliente/: up.sql
historico_mudancas/17 - Persistencia/04 - orm_disel/src/: main.rs  schema.rs
historico_mudancas/17 - Persistencia/04 - orm_disel/src/config/: cnn.rs
historico_mudancas/17 - Persistencia/04 - orm_disel/src/models/: cliente.rs  mod.rs  novo_cliente.rs
historico_mudancas/17 - Persistencia/04 - orm_disel/src/repositorios/: cliente_repositorio.rs
historico_mudancas/17 - Persistencia/04 - orm_disel/src/tela/: display.rs
historico_mudancas/18 - Programação web/ActixWeb/actix-web-json-completo/: Actix.toml  Cargo.toml
historico_mudancas/18 - Programação web/ActixWeb/actix-web-json-completo-minimal/: Actix.toml  Cargo.toml
historico_mudancas/18 - Programação web/ActixWeb/actix-web-json-completo-minimal/src/: main.rs
historico_mudancas/18 - Programação web/ActixWeb/actix-web-json-completo/src/: config.rs  handlers.rs  main.rs  middleware.rs  models.rs  services.rs
historico_mudancas/18 - Programação web/rocket/rocket-json-completo/: Cargo.toml  Rocket.toml
historico_mudancas/18 - Programação web/rocket/rocket-json-completo/src/: main.rs
historico_mudancas/19 - Tests/03 - comportamento/: Cargo.toml  test.sh
historico_mudancas/19 - Tests/03 - comportamento/src/: main.rs
historico_mudancas/22 - Projeto Final/actix-web-json-completo/: .env  Cargo.toml  README.md
historico_mudancas/22 - Projeto Final/actix-web-json-completo/db/: migrate.sh  restore.sql
historico_mudancas/22 - Projeto Final/actix-web-json-completo/model_macro/: Cargo.toml
historico_mudancas/22 - Projeto Final/actix-web-json-completo/model_macro/src/: lib.rs
historico_mudancas/22 - Projeto Final/actix-web-json-completo/src/: config.rs  handlers.rs  jwt.rs  main.rs  models.rs  repositorio.rs  utils.rs
historico_mudancas/22 - Projeto Final/rocket-carrinho-finalizado/: Cargo.toml  README.md  Rocket.toml
historico_mudancas/22 - Projeto Final/rocket-carrinho-finalizado/db/: migrate.sh  rusqlite.db  script.sql
historico_mudancas/22 - Projeto Final/rocket-carrinho-finalizado/src/: main.rs
historico_mudancas/22 - Projeto Final/rocket-carrinho-finalizado/src/config/: cnn.rs
historico_mudancas/22 - Projeto Final/rocket-carrinho-finalizado/src/controllers/: clientes_controller.rs  compras_controller.rs
historico_mudancas/22 - Projeto Final/rocket-carrinho-finalizado/src/dtos/: cliente_dto.rs
historico_mudancas/22 - Projeto Final/rocket-carrinho-finalizado/src/models/: cliente.rs  mod.rs  pedido.rs  pedido_produto.rs  produto.rs
historico_mudancas/22 - Projeto Final/rocket-carrinho-finalizado/src/modelviews/: mod.rs  pedido_view.rs  produto_view.rs
historico_mudancas/22 - Projeto Final/rocket-json-completo_aula/: .env  Cargo.toml  Dockerfile  README.md
historico_mudancas/22 - Projeto Final/rocket-json-completo_aula/db/: restore.sql
historico_mudancas/22 - Projeto Final/rocket-json-completo_aula/src/: main.rs  schema.rs
historico_mudancas/22 - Projeto Final/rocket-json-completo_aula/tests_curl/: delete_recurso.sh  get_home.sh  get_recursos.sh  post_recurso.sh
(+274 files in other folders)
