[package]
name = "orm_disel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.15.0"

[dev-dependencies]
diesel_cli = { version = "1.4.0", features = ["mysql"] }
