[package]
name = "cucumber"
version = "0.20.2" # should be the same as main crate version
edition = "2021"

[dependencies]

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.20.2"
derive_more = "0.99.17"
futures = "0.3.17"
tempfile = "3.2"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "example"
path = "tests/example.rs"
harness = false