[package]
name = "rocket-json"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.2.0"
chrono = "0.4"
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.15.0"

[dev-dependencies]
diesel_cli = { version = "1.4.0", features = ["mysql"] }
