[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
config = "0.11"


[dev-dependencies]

