[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix-service = "2.0"
uuid = { version = "0.8", features = ["serde", "v4"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
config = "0.11"
jsonwebtoken = "7.2.0"
bcrypt = "0.8.2"


[dev-dependencies]

